# factory_database

./: LICENSE  README.md  main.py  pyproject.toml
src/data/: __init__.py  sample.py
src/proj/menu/: __init__.py  determine_action.py  get_actions.py  get_next_action.py  start_print.py
src/proj/menu/actions/: __init__.py  clear_screen.py  exit_app.py  wait_for_enter.py
src/proj/resources_control/: __init__.py  add_new_rows.py  delete_row.py  display_all.py  display_ordered_items.py  input_key.py  input_value.py  search_row.py
